plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'recargapay'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mapstruct:mapstruct:1.6.0.Beta1'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation platform('org.testcontainers:testcontainers-bom:2.0.2')
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers-postgresql'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	runtimeOnly 'org.postgresql:postgresql'

	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.0.Beta1'
}

tasks.named('test') {
	useJUnitPlatform()
}
